--- a/app/src/main/res/layout/activity_land_list.xml
+++ b/app/src/main/res/layout/activity_land_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activitylandlist.CActivityLandListXML"
+    tools:context=".ui.activitylandlist.CActivityLandListClassic"
     android:orientation="vertical"
     >
     <androidx.recyclerview.widget.RecyclerView
@@ -12,4 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButtonAddItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/baseline_add_24"
+        android:focusable="true"
+        app:backgroundTint="@color/primary"
+        app:tint = "@color/white"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
